--- a/index.html
+++ b/index.html
@@ -1015,4 +1015,4 @@ body .markdown-body
   }
 }
 </style><title>index</title></head><body><article class="markdown-body"><h2 id="suraj-rampure"><a name="user-content-suraj-rampure" href="#suraj-rampure" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Suraj Rampure</h2>
-<p>Hey there! As you can see, my site is currently under construction. In the meantime, have a look at my <a = href "Suraj Rampure Resume.pdf> resume</a>.</p></article></body></html>
+<p>Hey there! As you can see, my site is currently under construction. In the meantime, have a look at my <a = href "/Suraj Rampure Resume.pdf> resume</a>.</p></article></body></html>
