updated index with resume

--- a/index.html
+++ b/index.html
@@ -1014,5 +1014,5 @@ body .markdown-body
     page-break-after: avoid;
   }
 }
-</style><title>index</title></head><body><article class="markdown-body"><h2 id="suraj-rampure"><a name="user-content-suraj-rampure" href="#suraj-rampure" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Suraj Rampure</h2>
-<p>Hey there! As you can see, my site is currently under construction. In the meantime, have a look at my <a = href "/Suraj Rampure Resume.pdf> resume</a>.</p></article></body></html>
+</style><title>index</title></head><body><article class="markdown-body"><h1 id="suraj-rampure"><a name="user-content-suraj-rampure" href="#suraj-rampure" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Suraj Rampure</h1>
+<p>Hey there! As you can see, my site is currently under construction. In the meantime, have a look at my <a href="/Users/surajrampure/Library/Mobile%20Documents/com%7Eapple%7ECloudDocs/github/surajrampure.github.io/Suraj%20Rampure%20Resume.pdf">resume</a>.</p></article></body></html>
