--- a/index.html
+++ b/index.html
@@ -1016,4 +1016,4 @@ body .markdown-body
 }
 </style><title>index</title></head><body><article class="markdown-body"><h1 id="suraj-rampure"><a name="user-content-suraj-rampure" href="#suraj-rampure" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Suraj Rampure</h1>
 <h4 id="freshman-eecs-student-uc-berkeley"><a name="user-content-freshman-eecs-student-uc-berkeley" href="#freshman-eecs-student-uc-berkeley" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Freshman EECS Student @ UC Berkeley</h4>
-<p>Hey there! As you can see, my site is currently under construction. In the meantime, have a look at my <a href="https://drive.google.com/file/d/0B1-ExTPvxCvNX1JOMFlWQWFxbms/view?usp=sharing">resume</a>.</p></article></body></html>
+<p>Hey there! As you can see, my site is currently under construction. In the meantime, have a look at my <a href="Suraj Rampure Resume.pdf">resume</a>.</p></article></body></html>
