--- a/index.html
+++ b/index.html
@@ -1015,5 +1015,5 @@ body .markdown-body
   }
 }
 </style><title>index</title></head><body><article class="markdown-body"><h1 id="suraj-rampure"><a name="user-content-suraj-rampure" href="#suraj-rampure" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Suraj Rampure</h1>
-<h4 id="freshman-eecs-student-uc-berkeley"><a name="user-content-freshman-eecs-student-uc-berkeley" href="#freshman-eecs-student-uc-berkeley" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Freshman EECS Student @ UC Berkeley</h4>
-<p>Hey there! As you can see, my site is currently under construction. In the meantime, have a look at my <a href="Suraj Rampure Resume.pdf">resume</a>.</p></article></body></html>
+<h4 id="eecs-student-uc-berkeley"><a name="user-content-eecs-student-uc-berkeley" href="#eecs-student-uc-berkeley" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>EECS Student @ UC Berkeley</h4>
+<p>Hey there! As you can see, my site is currently under construction. In the meantime, have a look at my <a href="/Users/surajrampure/Library/Mobile%20Documents/com%7Eapple%7ECloudDocs/github/surajrampure.github.io/resume.pdf">resume</a>.</p></article></body></html>
