--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"> <a href = "index.html"> <img src="images/avatar.jpg" alt="" /> </a> </span>
 					<h1 id="logo"><a href="#">Suraj Rampure</a></h1>
 					<p>  suraj.rampure@berkeley.edu <br>  <br> Check out my  <a href = "http://www.github.com/surajrampure"> GitHub </a> repos ,
 									  <a href = "http://www.linkedin.com/in/rampuresuraj"> LinkedIn </a> profile and <a href = "resume.pdf"> resume </a>.</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Coursework</a></li>
-						<li><a href="resources.html">Data 8 / CS 70 Resources</a></li>
+						<li><a href="index.html" class="active">Homepage</a></li>
+						<li><a href="resources.html"> Data 8 / CS 70 Resources</a></li>
 					</ul>
 				</nav>
 			</section>
@@ -44,7 +43,7 @@
 									studying Electrical Engineering and Computer Science with a
 									minor in Mathematics at <a href = "http://berkeley.edu">UC Berkeley</a>. I come to the Bay Area from southwestern Ontario, Canada, from the city of Windsor.</p>
 
-									<p>This semester, on the course staff of <a href = "http://data8.org">Data Science 8</a>, Berkeley's introductory data science course, as a tutor. I'm also serving as Junior Mentor for <a href = "http://eecs70.org">CS 70</a>, Discrete Mathematics and Probability Theory, under the <a href = "http://csmberkeley.github.io">Computer Science Mentors</a> organization.   </p>
+									<p>This semester, I'm on the course staff of <a href = "http://data8.org">Data Science 8</a>, Berkeley's introductory data science course, as a tutor. I'm also serving as Junior Mentor for <a href = "http://eecs70.org">CS 70</a>, Discrete Mathematics and Probability Theory, under the <a href = "http://csmberkeley.github.io">Computer Science Mentors</a> organization.   </p>
 
 									<p> If you're interested in learning more about the projects that I've done and that I'm working on, or would like to contact me, please have a look at the links to the right. I'd love to speak with you!</p>
 								</div>
@@ -57,10 +56,10 @@
 									<p>Below, you'll find a listing of the relevant I've taken so far and the courses I'm currently taking, along with a link to a set of my personal notes for certain courses.</p>
 
 									<h4> Spring 2017 </h4>
-									<p> CS 61B (J. Hug) <br> EE 16A (B. Ayazifar, V. Stojanovic) <br> Math 110 (Z. Stankova) – <a href = "https://drive.google.com/drive/folders/0B1qMC2tYGIExRU5zRnJnd2lpZHc?usp=sharing"> Click to view course notes </a> <br> Math 128A (M. Gu)</p>
+									<p> CS 61B – Data Structures and Algorithms (J. Hug) <br> EE 16A – Designing Information Systems and Devices I (B. Ayazifar, V. Stojanovic) <br> Math 110 – Linear Algebra (Z. Stankova) – <a href = "https://drive.google.com/drive/folders/0B1qMC2tYGIExRU5zRnJnd2lpZHc?usp=sharing"> Click to view course notes </a> <br> Math 128A – Numerical Analysis (M. Gu)</p>
 
 									<h4> Fall 2016 </h4>
-									<p> CS 61A (J. Denero) <br> CS 70 (S. Seshia, J. Walrand) </p>
+									<p> CS 61A – Structure and Interpretation of Computer Programs (J. Denero) <br> CS 70 – Discrete Mathematics and Probability Theory (S. Seshia, J. Walrand) </p>
 								</div>
 							</section>
 
