added csm70 text

--- a/resources.html
+++ b/resources.html
@@ -39,7 +39,7 @@
 										<h3>Resources for Data 8 Students</h3>
 										<br>
 										<h4>Data 8 Tutoring Sections</h4>
-										Mondays, 1:40-2:25pm and 2:25pm-3:10 @ Berkeley Institute for Data Science, Doe Library
+										Mondays, 1:40pm-2:25pm and 2:25pm-3:10pm @ Berkeley Institute for Data Science, Doe Library
 										<br>
 										<br>
 										<h4>Office Hours</h4>
@@ -49,6 +49,8 @@
 										<h4>Supplementary Materials for Tutoring Sections</h4>
 										I decided to write a mini-book containing resources (problems, primarily) for Data 8 tutoring sessions each week. All Data 8 students are free to use them as they wish.
 										Access them here: <a href="https://surajrampure.gitbooks.io/data-8-tutoring-resources/">https://surajrampure.gitbooks.io/data-8-tutoring-resources/</a>
+                                        <br>
+                                        <p> Week 1: <a href=https://surajrampure.gitbooks.io/data-8-tutoring-resources/week-1.html>Python Basics, Arrays</a></p>
 									</p>
 								</div>
 							</section>
@@ -57,7 +59,18 @@
 							<section id="cs70">
 								<div class="container">
 									<h3>Resources for CS 70 Students</h3>
-									Coming soon!
+									<br>
+                                    <h4>Computer Science Mentors Sections</h4>
+                                    Mondays and Fridays, 11am-12:30pm @ Cory Hall, 557
+                                    <br>
+                                    <br>
+                                    <p>Weekly survey – coming soon!</p>
+                                    <br>
+                                    <h5>CSM Worksheets and Solutions</h5>
+                                    <p>Week 0: <a href="https://drive.google.com/file/d/0B_Z3nCc4p14DcVpUc2hENERrMlE/view">Worksheet</a>    <a href="https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14DUEU1T0xQMVJIOVE/view?usp=sharing">         Solutions</a><br>
+                                    Week 1 (Jan. 30 - Feb. 3): <a href=https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14DcjZsNjNYdjJqdFU/view?usp=sharing>Worksheet</a>          Solutions coming soon</p>
+
+
 								</div>
 					</div>
 
