added week 2 info

--- a/resources.html
+++ b/resources.html
@@ -64,11 +64,11 @@
                                     Mondays and Fridays, 11am-12:30pm @ Cory Hall, 557
                                     <br>
                                     <br>
-                                    <p>Weekly survey – coming soon!</p>
-                                    <br>
                                     <h5>CSM Worksheets and Solutions</h5>
                                     <p>Week 0: <a href="https://drive.google.com/file/d/0B_Z3nCc4p14DcVpUc2hENERrMlE/view">Worksheet</a>    <a href="https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14DUEU1T0xQMVJIOVE/view?usp=sharing">         Solutions</a><br>
-                                    Week 1 (Jan. 30 - Feb. 3): <a href=https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14DcjZsNjNYdjJqdFU/view?usp=sharing>Worksheet</a>          Solutions coming soon</p>
+                                    Week 1 (Jan. 30 - Feb. 3): <a href=https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14DcjZsNjNYdjJqdFU/view?usp=sharing>Worksheet</a><a href=https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14Dc3dFbjNOZ1FfXzA/view?usp=sharing>Solutions</a><a href=https://drive.google.com/a/berkeley.edu/file/d/0Bz6qw2j25SKwNkI1N0RLWEtJVEU/view?usp=sharing>Supplementary Explanations</a><br>
+                                    Week 2 (Feb. 6 - Feb. 10): <a href=https://drive.google.com/a/berkeley.edu/file/d/0Bz6qw2j25SKwRzNqVldYdlEzd1U/view?usp=sharing>Worksheet</a><br>
+                                    </p>
 
 
 								</div>
