week 3 worksheet up

--- a/resources.html
+++ b/resources.html
@@ -65,14 +65,44 @@
                                     <br>
                                     <br>
                                     <h5>CSM Worksheets and Solutions</h5>
-                                    <p>Week 0: <a href="https://drive.google.com/file/d/0B_Z3nCc4p14DcVpUc2hENERrMlE/view">Worksheet</a>      <a href="https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14DUEU1T0xQMVJIOVE/view?usp=sharing">            Solutions</a><br>
-                                    Week 1 (Jan. 30 - Feb. 3): <a href=https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14DcjZsNjNYdjJqdFU/view?usp=sharing>      Worksheet</a>      <a href=https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14Dc3dFbjNOZ1FfXzA/view?usp=sharing>      Solutions       </a>      <a href=https://drive.google.com/a/berkeley.edu/file/d/0Bz6qw2j25SKwNkI1N0RLWEtJVEU/view?usp=sharing>      Supplementary Explanations      </a><br>
-                                    Week 2 (Feb. 6 - Feb. 10): <a href=https://drive.google.com/a/berkeley.edu/file/d/0Bz6qw2j25SKwRzNqVldYdlEzd1U/view?usp=sharing>Worksheet</a><br>
-                                    </p>
+                                    <table dir="ltr" width="500" border="1"
+										<colgroup width="50%" />
+										<colgroup id="colgroup" class="colgroup" align="center"
+												valign="middle" title="title" width="1*"
+												span="2" style="background:#ddd;" />
+										<tbody>
+											<tr>
+												<td>Week 0</td>
+												<td><a href="https://drive.google.com/file/d/0B_Z3nCc4p14DcVpUc2hENERrMlE/view">Worksheet</a></td>
+												<td><a href="https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14DUEU1T0xQMVJIOVE/view?usp=sharing">Solutions</a></td>
+											</tr>
+
+											<tr>
+												<td>Week 1</td>
+												<td><a href=https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14DcjZsNjNYdjJqdFU/view?usp=sharing>Worksheet</a></td>
+												<td><a href=https://drive.google.com/a/berkeley.edu/file/d/0B_Z3nCc4p14Dc3dFbjNOZ1FfXzA/view?usp=sharing>Solutions</a>&nbsp;<a href=https://drive.google.com/a/berkeley.edu/file/d/0Bz6qw2j25SKwNkI1N0RLWEtJVEU/view?usp=sharing>(Supplementary Explanations)</a></td>
+											</tr>
+
+											<tr>
+												<td>Week 2</td>
+												<td><a href=https://drive.google.com/a/berkeley.edu/file/d/0Bz6qw2j25SKwRzNqVldYdlEzd1U/view?usp=sharing>Worksheet</a></td>
+												<td><a href=https://d1b10bmlvqabco.cloudfront.net/attach/iy2g5fok1oo7gj/idrimfe95hh5hy/iz1knlefo0hx/worksheet02_sol.pdf>Solutions</a></td>
+											</tr>
+
+											<tr>
+												<td>Week 3</td>
+												<td><a href=https://drive.google.com/open?id=0B_Z3nCc4p14DeDU2dzBuY1RNeDg>Worksheet</a></td>
+												<td>Solutions coming soon...</td>
+											</tr>
+
+
+										</tbody>
+									</table>
 
 
 								</div>
 					</div>
+
 
 				<!-- Footer -->
 					<section id="footer">
