pushed new teaching page

--- a/data8.html
+++ b/data8.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <link rel="stylesheet" href="air.css">
-      <title>Suraj Rampure</title>
+      <title>Teaching – Suraj Rampure</title>
       <!-- common.css -->
       <style>* {-webkit-tap-highlight-color: rgba(0,0,0,0);}html {-webkit-text-size-adjust: none;}body {font-family: -apple-system, Helvetica, Arial, sans-serif;margin: 0;padding: 20px;color: #333;word-wrap: break-word;}h1, h2, h3, h4, h5, h6 {line-height: 1.1;}img {max-width: 100% !important;height: auto;}blockquote {margin: 0;padding: 0 15px;color: #777;border-left: 4px solid #ddd;}hr {background-color: #ddd;border: 0;height: 1px;margin: 15px 0;}code {font-family: Menlo, Consolas, 'Ubuntu Mono', Monaco, 'source-code-pro', monospace;line-height: 1.4;margin: 0;padding: 0.2em 0;font-size: 90%;background-color: rgba(0,0,0,0.04);border-radius: 3px;}pre > code {margin: 0;padding: 0;font-size: 100%;word-break: normal;background: transparent;border: 0;}ol {list-style-type: decimal;}ol ol, ul ol {list-style-type: lower-latin;}ol ol ol, ul ol ol, ul ul ol, ol ul ol {list-style-type: lower-roman;}table {border-spacing: 0;border-collapse: collapse;margin-top: 0;margin-bottom: 16px;}table th {font-weight: bold;}table th, table td {padding: 6px 13px;border: 1px solid #ddd;}table tr {border-top: 1px solid #ccc;}table tr:nth-child(even) {background-color: #f8f8f8;}input[type="checkbox"] {cursor: default;margin-right: 0.5em;font-size: 13px;}.task-list-item {list-style-type: none;}.task-list-item+.task-list-item {margin-top: 3px;}.task-list-item input {float: left;margin: 0.3em 1em 0.25em -1.6em;vertical-align: middle;}#tag-field {margin: 8px 2px 10px;}#tag-field .tag {display: inline-block;background: #cadff3;border-radius: 4px;padding: 1px 8px;color: black;font-size: 12px;margin-right: 10px;line-height: 1.4;}</style>
       <!-- ace-static.css -->
@@ -23,100 +23,35 @@
       </style>
       <!-- User CSS -->
       <style> .text-cell {font-size: 15px;}.code-cell {font-size: 12px;}.markdown-cell {font-size: 18px;}.latex-cell {font-size: 15px;}</style>
+      <style type="text/css">
+        table.center {
+          margin-left: auto;
+          margin-right: auto;
+        }
+      </style>
     </head>
     <body>
       
       <div id="titlearea">
         <h2>Suraj Rampure</h2>
-        <h4><strong><a href="index.html">Home</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="teaching.html">Teaching</a></h4>
+        <h4><a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="teaching.html">Teaching</a></h4>
       </div>
-      <div id="contentarea"><div class="cell markdown-cell"><p><img src="resources/056119D2A94A6E703A60061F0BBF4436.png" alt="circle.png"><br>
-
-      </p>
-<p>Hi there! I’m a second year Electrical Engineering and Computer Science undergraduate at UC Berkeley<br> by way of Windsor, Ontario, a small Canadian city that sits on the Detroit River.<br><br><br>
-<strong>In Fall 2017, I am...</strong></p>
-<ul>
-<li>an <strong>Undergraduate Student Instructor (uGSI)</strong> for <a href="http://data8.org">Data 8</a>, Berkeley’s introductory data science course
-<ul>
-<li>I'm responsible for a lab of 30 students, holding office hours, and helping create content (exams, assignments, supplementary material)</li>
-</ul>
-</li>
-<br>
+      <div id="contentarea"><div class="cell markdown-cell"><h3><strong>Data 8, Fall 2017</strong></h3>
+<p>
+  <strong>Lab:</strong> Thursdays, 3-5PM in 458 Evans, for those with no programming experience<br>
+  <strong>Office Hours:</strong> Tuesdays, 4-5PM in 254 Sutardja Dai Hall
+  <br><br>
+  You can always contact me via email at <strong>suraj.rampure@berkeley.edu</strong>.
+</p>
 
 
-<li>a <strong>Co-coordinator and Senior Mentor</strong> for <a href="https://csmberkeley.github.io">Computer Science Mentors</a>' offering of <a href="http://eecs70.org">CS 70</a>, Berkeley's lower-division discrete math and probability course that is a pre-requisite to declare the CS major
-<ul>
-<li>I'm one of two people responsible for ensuring that CS 70 tutoring runs smoothly through CSM, by making sure worksheets are up to date and that tutors are informed the best teaching practices</li>
-<li>I also teach a section of six students for 1.5h a week as a Senior Mentor</li>
-</ul>
-</li>
-<br>
+<table class="center"> 
+<tr> <th></th> <th>Date</th> <th>Topic</th> <th>Discussion Slides</th> </tr> 
+<tr> <td>0</td><td>Aug. 24, 2017</td> <td>Welcome to Data 8!</td> <td>Slides 0 coming soon</td> </tr> 
 
-<li>a <strong>hackathon director</strong> for <a href="http://calhacks.io"> Cal Hacks</a>, UC Berkeley's premier annual hackathon
-</li>
-<br>
-
-<li>the <strong>Director of Curriculum Development</strong> of <a href="http://datascienceforindia.com"> Data Science for India</a>, a brand-new organization with the goal of spreading the data science movement to high schools in India
-<ul>
-<li>So far, numerous volunteers have taught over five hundred students with the Jupyter notebooks and worksheets created from scratch through DSI</li>
-</ul>
-</li>
-<br>
-<li>taking the following courses:
-<ul>
-<li>CS 170, <strong>Efficient Algorithms</strong>, with P. Raghavendra</li>
-<li>CS 189, <strong>Introduction to Machine Learning</strong>, with A. Sahai</li>
-</ul>
-<br>
-<br>
-<br>
-</ul>
+</table>
 
 
-<p><strong>Previously, I...</strong></p>
-
-<ul>
-<li>was a <strong>tutor</strong> for Data 8</li>
-<ul>
-<li>I helped create tutoring worksheets, staff office hours, and taught small groups of students in tutoring sections</li>
-</ul>
-
-<br>
-
-<li>was a <strong>Junior Mentor</strong> for Computer Science Mentors</li>
-  <ul>
-  <li>I taught and reviewed CS 70 concepts with two sections of six students each week</li>
-  </ul>
-
-<br>
-
-<li>took the following courses:</li>
-	<ul>
-	<li>CS 61A, <strong>Structure and Interpretation of Computer Programs</strong>, with J. Denero (Fall 2016)</li>
-	<li>CS 70, <strong>Discrete Mathematics and Probability Theory</strong>, with S. Seshia and J. Walrand (Fall 2016)</li>
-	<li>CS 61B, <strong>Data Structures</strong>, with J. Hug (Spring 2017)</li>
-  <li>Math 110, <strong>Linear Algebra</strong>, with Z. Stankova (Spring 2017)</li>
-  <li>Math 128A, <strong>Numerical Analysis</strong>, with M. Gu (Spring 2017)</li>
-  <li>EE 16A, <strong>Designing Information Devices</strong>, with B. Ayazifar and V. Stojanovic (Spring 2017)</li>
-  <li>Math 53, <strong>Multivariable Calculus</strong>, with M. Hutchings (Summer 2017)</li>
-	</ul>
-</ul>
-</ul>
-</ul>
-<br>
-<br>
-
-<h3>Teaching</h3>
-<p> Click <a href="teaching.html"><strong>here</strong></a> to visit my teaching page.</p>
-<br>
-<h3>Connect with Me</h3>
-<p>If you'd like to check out some of my work, you can do so on my <a href="http://github.com/surajrampure>">GitHub</a> profile.<br>You can also connect with me on <a href="http://linkedin.com/in/rampuresuraj"> LinkedIn</a>.</p>
-<p>My resume can be found <a href="http://surajrampure.com/resume.pdf">here</a>. <br>If you'd like to contact me, send me an e-mail at <a href="mailto:suraj.rampure@berkeley.edu">suraj.rampure@berkeley.edu</a>.</p>
-
-
-<br>
-<br>
-Markdown CSS from <a href="https://markdowncss.github.io">https://markdowncss.github.io</a>.
 </div></div>
       <script></script>
     </body>
