--- a/data8.html
+++ b/data8.html
@@ -47,7 +47,7 @@
 
 <table class="center"> 
 <tr> <th></th> <th>Date</th> <th>Topic</th> <th>Discussion Slides</th> </tr> 
-<tr> <td>0</td><td>Aug. 24, 2017</td> <td>Welcome to Data 8!</td> <td>Slides 0 coming soon</td> </tr> 
+<tr> <td>1</td><td>Aug. 24, 2017</td> <td>Welcome to Data 8!</td> <td><a href="resources/Week 1.pdf">Slides 1</a></td> </tr> 
 
 </table>
 
