--- a/data8.html
+++ b/data8.html
@@ -48,7 +48,7 @@
 <table class="center"> 
 <tr> <th></th> <th>Date</th> <th>Topic</th> <th>Discussion Slides</th> </tr> 
 <tr> <td>1</td><td>Aug. 24, 2017</td> <td>Welcome to Data 8!</td> <td><a href="resources/data8/Week 1.pdf">Slides 1</a></td> </tr> 
-
+<tr> <td>2</td><td>Aug. 31, 2017</td> <td>Causality, Expressions, Arrays</td> <td><a href="resources/data8/Week 2.pdf">Slides 2</a></td> </tr> 
 </table>
 
 
