added slides3, keynotes

--- a/data8.html
+++ b/data8.html
@@ -42,14 +42,19 @@
   <strong>Office Hours:</strong> Tuesdays, 4-5PM in 254 Sutardja Dai Hall
   <br><br>
   You can always contact me via email at <strong>suraj.rampure@berkeley.edu</strong>.
+  <br><br>
+  Give me feedback <a href="https://goo.gl/forms/ocDDCYoxpBMBLRnH2"><strong>here</strong></a>.
 </p>
 
 
 <table class="center"> 
-<tr> <th></th> <th>Date</th> <th>Topic</th> <th>Discussion Slides</th> </tr> 
-<tr> <td>1</td><td>Aug. 24, 2017</td> <td>Welcome to Data 8!</td> <td><a href="resources/data8/Week 1.pdf">Slides 1</a></td> </tr> 
-<tr> <td>2</td><td>Aug. 31, 2017</td> <td>Causality, Expressions, Arrays</td> <td><a href="resources/data8/Week 2.pdf">Slides 2</a></td> </tr> 
+<tr> <th></th> <th>Date</th> <th>Topic</th> <th>Slides (.pdf)</th> <th> Slides (.keynote)</tr> 
+<tr> <td>1</td><td>Aug. 24, 2017</td> <td>Welcome to Data 8!</td> <td><a href="resources/data8/pdf/Week 1.pdf">Week 1.pdf</a></td><td> <a href="resources/data8/key/Week 1.key">Week 1.key </a></td> </tr> 
+<tr> <td>2</td><td>Aug. 31, 2017</td> <td>Causality, Expressions, Arrays</td> <td><a href="resources/data8/pdf/Week 2.pdf">Week 2.pdf</a><td> <a href="resources/data8/key/Week 2.key"> Week 2.key</a></td></td>
+<tr> <td>3</td><td>Sept. 7, 2017</td> <td>Data Visualizations, Tables</td> <td><a href="resources/data8/pdf/Week 3.pdf">Week 3.pdf</a></td> <td> <a href="resources/data8/key/Week 3.key"> Week 3.key </a></td></tr> 
 </table>
+
+<p> Feel free to use and modify these slides, but please give me credit. </p>
 
 
 </div></div>
