--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>Suraj Rampure</h2>
         <h4><strong><a href="index.html">Home</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="teaching.html">Teaching</a></h4>
       </div>
-      <div id="contentarea"><div class="cell markdown-cell"><p><img src="resources/056119D2A94A6E703A60061F0BBF4436.png" alt="circle.png"><br>
+      <br><img src="resources/056119D2A94A6E703A60061F0BBF4436.png" alt="circle.png" height="500px" width="500px">
 
       </p>
 <p>Hi there! I’m a second year Electrical Engineering and Computer Science undergraduate at UC Berkeley<br> by way of Windsor, Ontario, a small Canadian city that sits on the Detroit River.<br><br><br>
@@ -39,6 +39,7 @@
 <li>an <strong>Undergraduate Student Instructor (uGSI)</strong> for <a href="http://data8.org">Data 8</a>, Berkeley’s introductory data science course
 <ul>
 <li>I'm responsible for a lab of 30 students, holding office hours, and helping create content (exams, assignments, supplementary material)</li>
+<li>Access my Data 8 page <a href="data8.html">here</a>, and access the course website <a href="http://data8.org/fa17"> here</a>
 </ul>
 </li>
 <br>
@@ -65,7 +66,8 @@
 <li>taking the following courses:
 <ul>
 <li>CS 170, <strong>Efficient Algorithms</strong>, with P. Raghavendra</li>
-<li>CS 189, <strong>Introduction to Machine Learning</strong>, with A. Sahai</li>
+<li>EECS 126, <strong>Probability and Random Processes</strong>, with A. Parekh and J. Walrand</li>
+<li>Engineering 120, <strong>Engineering Economics</strong>, with E. Friedman</li>
 </ul>
 <br>
 <br>
