--- a/teaching.html
+++ b/teaching.html
@@ -30,6 +30,7 @@
         <h2>Suraj Rampure</h2>
         <h4><a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="teaching.html">Teaching</a></strong></h4>
       </div>
+      <br><br>Give me feedback <a href="https://goo.gl/forms/ocDDCYoxpBMBLRnH2"><strong>here</strong></a>.
       <div id="contentarea"><div class="cell markdown-cell"><h4><strong>Fall 2017</strong></h4>
 <ul>
 <li>Undergraduate Student Instructor, Data 8
@@ -37,7 +38,7 @@
 <li>Current Data 8 students – click <a href="data8.html">here</a> for my class page</li>
 </ul>
 </li>
-<li>CS 70 Co-coordinator, Computer Science Mentors</li>
+<li>CS 70 Co-coordinator and Senior Mentor, Computer Science Mentors</li>
 </ul>
 <br><br>
 <h4><strong>Spring 2017</strong></h2>
