fised github link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <p> Click <a href="teaching.html"><strong>here</strong></a> to visit my teaching page.</p>
 <br>
 <h3>Connect with Me</h3>
-<p>If you'd like to check out some of my work, you can do so on my <a href="http://github.com/surajrampure>">GitHub</a> profile.<br>You can also connect with me on <a href="http://linkedin.com/in/rampuresuraj"> LinkedIn</a>.</p>
+<p>If you'd like to check out some of my work, you can do so on my <a href="http://github.com/surajrampure">GitHub</a> profile.<br>You can also connect with me on <a href="http://linkedin.com/in/rampuresuraj"> LinkedIn</a>.</p>
 <p>My resume can be found <a href="http://surajrampure.com/resume.pdf">here</a>. <br>If you'd like to contact me, send me an e-mail at <a href="mailto:suraj.rampure@berkeley.edu">suraj.rampure@berkeley.edu</a>.</p>
 
 
