updated resume, added slides4

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 <li>an <strong>Undergraduate Student Instructor (uGSI)</strong> for <a href="http://data8.org">Data 8</a>, Berkeley’s introductory data science course
 <ul>
 <li>I'm responsible for a lab of 30 students, holding office hours, and helping create content (exams, assignments, supplementary material)</li>
-<li>Access my Data 8 page <a href="data8.html">here</a>, and access the course website <a href="http://data8.org/fa17"> here</a>
-</ul>
+<li>Access my Data 8 page <a href="data8.html">here</a></li></ul>
 </li>
 <br>
 
@@ -113,7 +112,7 @@
 <br>
 <h3>Connect with Me</h3>
 <p>If you'd like to check out some of my work, you can do so on my <a href="http://github.com/surajrampure">GitHub</a> profile.<br>You can also connect with me on <a href="http://linkedin.com/in/rampuresuraj"> LinkedIn</a>.</p>
-<p>My resume can be found <a href="http://surajrampure.com/resume.pdf">here</a>. <br>If you'd like to contact me, send me an e-mail at <a href="mailto:suraj.rampure@berkeley.edu">suraj.rampure@berkeley.edu</a>.</p>
+<p>My resume can be found <a href="resume.pdf">here</a>. <br>If you'd like to contact me, send me an e-mail at <a href="mailto:suraj.rampure@berkeley.edu">suraj.rampure@berkeley.edu</a>.</p>
 
 
 <br>
