--- a/data8.html
+++ b/data8.html
@@ -51,10 +51,15 @@
 <tr> <th></th> <th>Date</th> <th>Topic</th> <th>Slides (.pdf)</th> <th> Slides (.keynote)</tr> 
 <tr> <td>1</td><td>Aug. 24, 2017</td> <td>Welcome to Data 8!</td> <td><a href="resources/data8/pdf/Week 1.pdf">Week 1.pdf</a></td><td> <a href="resources/data8/key/Week 1.key">Week 1.key </a></td> </tr> 
 <tr> <td>2</td><td>Aug. 31, 2017</td> <td>Causality, Expressions, Arrays</td> <td><a href="resources/data8/pdf/Week 2.pdf">Week 2.pdf</a><td> <a href="resources/data8/key/Week 2.key"> Week 2.key</a></td></td>
-<tr> <td>3</td><td>Sept. 7, 2017</td> <td>Data Visualizations, Tables</td> <td><a href="resources/data8/pdf/Week 3.pdf">Week 3.pdf</a></td> <td> <a href="resources/data8/key/Week 3.key"> Week 3.key </a></td></tr> 
+<tr> <td>3</td><td>Sept. 7, 2017</td> <td>Data Visualizations, Tables</td> <td><a href="resources/data8/pdf/Week 3.pdf">Week 3.pdf</a></td> <td> <a href="resources/data8/key/Week 3.key"> Week 3.key </a></td></tr>
+<tr> <td>4</td><td>Sept. 14, 2017</td> <td>Histograms, Functions</td> <td><a href="resources/data8/pdf/Week 4.pdf">Week 4.pdf</a></td> <td> <a href="resources/data8/key/Week 4.key"> Week 4.key </a></td></tr>  
 </table>
 
 <p> Feel free to use and modify these slides, but please give me credit. </p>
+<br><br>
+
+<h4><strong>Other Resources:</strong></h4>
+<a href="resources/data8/ch2-causation.pdf">Causality Notes by Vasilis</a>
 
 
 </div></div>
