--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>Suraj Rampure</h2>
         <h4><strong><a href="index.html">Home</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="teaching.html">Teaching</a></h4>
       </div>
-      <br><img src="resources/056119D2A94A6E703A60061F0BBF4436.png" alt="circle.png" height="500px" width="500px">
+      <br><img src="resources/me.png" alt="circle.png" height="500px" width="500px">
 
       </p>
 <p>Hi there! I’m a second year Electrical Engineering and Computer Science undergraduate at UC Berkeley<br> by way of Windsor, Ontario, a small Canadian city that sits on the Detroit River.<br><br><br>
