--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
       <div id="titlearea">
         <h2>Suraj Rampure</h2>
-        <h4><strong><a href="index.html">Home</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="teaching.html">Teaching</a></h4>
+        <h4><strong><a href="index.html">Home</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="data8.html">Teaching</a></h4>
       </div>
       <br><img src="resources/me.png" alt="circle.png" height="500px" width="500px">
 
