--- a/data8.html
+++ b/data8.html
@@ -57,6 +57,7 @@
 <tr> <td>6</td><td>Sept. 28, 2017</td> <td>Table Aggregation, Conditionals, Iteration and Sampling, Probability</td> <td><a href="resources/data8/pdf/week6.pdf">week6.pdf</a></td> <td> <a href="resources/data8/key/week6.key">week6.key</a></td></tr>
 <tr> <td>7</td><td>Oct. 5, 2017</td> <td>Midterm Review</td> <td>No slides</td><td>No slides</td></tr>
 <tr> <td>8</td><td>Oct. 12, 2017</td> <td>Hypothesis Testing, Extra Probability Practice (Discussion Solutions)</td> <td><a href="resources/data8/pdf/week8.pdf">week8.pdf</a></td> <td> <a href="resources/data8/key/week8.key">week8.key</a></td></tr>
+<tr> <td>8</td><td>Oct. 19, 2017</td> <td>Percentiles, Confidence Intervals</td> <td><a href="resources/data8/pdf/week9.pdf">week9.pdf</a></td> <td> <a href="resources/data8/key/week9.key">week9.key</a></td></tr>
 
 </table>
 
