added su17 mt walkthrough

--- a/data8.html
+++ b/data8.html
@@ -68,6 +68,8 @@
 <p> While teaching Data 8, I've created several walkthrough and review videos. Take a look at them here: </p>
 <p><strong>Created in Fall 2017:</strong></p>
 <p><a href="https://www.youtube.com/watch?v=7P6zJmMV7AE">Histograms Review, Midterm 1</a></p>
+<p><a href="https://www.youtube.com/watch?v=mdHvHv_lqLk">Summer 2017 Midterm Walkthrough</a></p>
+
 <p><strong>Created in Spring 2017:</strong></p>
 <p><a href="https://www.youtube.com/watch?v=LPMzXlYf8n8">Spring 2017 Midterm Walkthrough</a></p>
 <p><a href="https://www.youtube.com/watch?v=LR8Zfa1JovA">Fall 2016 Midterm Walkthrough</a></p>
