fixed and added link to tvd

--- a/data8.html
+++ b/data8.html
@@ -57,7 +57,7 @@
 <tr> <td>6</td><td>Sept. 28, 2017</td> <td>Table Aggregation, Conditionals, Iteration and Sampling, Probability</td> <td><a href="resources/data8/pdf/week6.pdf">week6.pdf</a></td> <td> <a href="resources/data8/key/week6.key">week6.key</a></td></tr>
 <tr> <td>7</td><td>Oct. 5, 2017</td> <td>Midterm Review</td> <td>No slides</td><td>No slides</td></tr>
 <tr> <td>8</td><td>Oct. 12, 2017</td> <td>Hypothesis Testing, Extra Probability Practice (Discussion Solutions)</td> <td><a href="resources/data8/pdf/week8.pdf">week8.pdf</a></td> <td> <a href="resources/data8/key/week8.key">week8.key</a></td></tr>
-<tr> <td>8</td><td>Oct. 19, 2017</td> <td>Percentiles, Confidence Intervals</td> <td><a href="resources/data8/pdf/week9.pdf">week9.pdf</a></td> <td> <a href="resources/data8/key/week9.key">week9.key</a></td></tr>
+<tr> <td>9</td><td>Oct. 19, 2017</td> <td>Percentiles, Confidence Intervals</td> <td><a href="resources/data8/pdf/week9.pdf">week9.pdf</a></td> <td> <a href="resources/data8/key/week9.key">week9.key</a></td></tr>
 
 </table>
 
@@ -67,7 +67,7 @@
 <h4><strong>Videos</strong></h4>
 <p> While teaching Data 8, I've created several walkthrough and review videos. Take a look at them here: </p>
 <p><strong>Created in Fall 2017:</strong></p>
-<p><a href="https://www.youtube.com/watch?v=7P6zJmMV7AE">Histograms Review, Midterm 1</a></p>
+<p><a href="https://www.youtube.com/watch?v=7P6zJmMV7AE">Histograms Midterm Review</a></p>
 <p><a href="https://www.youtube.com/watch?v=mdHvHv_lqLk">Summer 2017 Midterm Walkthrough</a></p>
 
 <p><strong>Created in Spring 2017:</strong></p>
@@ -77,8 +77,9 @@
 
 
 <br><br>
-<h4><strong>Other Resources:</strong></h4>
-<p><a href="resources/data8/ch2-causation.pdf">Causality Notes by Vasilis</a></p>
+<h4><strong>Other Resources</strong></h4>
+<p><a href="resources/data8/tvd-walkthrough.html">Total Variation Distance – A Walkthrough</a></p>
+<p><a href="resources/data8/ch2-causation.pdf">Causality Notes [Vasilis]</a></p>
 
 
 </div></div>
