--- a/data8.html
+++ b/data8.html
@@ -58,6 +58,7 @@
 <tr> <td>7</td><td>Oct. 5, 2017</td> <td>Midterm Review</td> <td>No slides</td><td>No slides</td></tr>
 <tr> <td>8</td><td>Oct. 12, 2017</td> <td>Hypothesis Testing, Extra Probability Practice (Discussion Solutions)</td> <td><a href="resources/data8/pdf/week8.pdf">week8.pdf</a></td> <td> <a href="resources/data8/key/week8.key">week8.key</a></td></tr>
 <tr> <td>9</td><td>Oct. 19, 2017</td> <td>Percentiles, Confidence Intervals</td> <td><a href="resources/data8/pdf/week9.pdf">week9.pdf</a></td> <td> <a href="resources/data8/key/week9.key">week9.key</a></td></tr>
+<tr> <td>10</td><td>Oct. 26, 2017</td> <td>Bootstrapping, More Confidence Intervals</td> <td><a href="resources/data8/pdf/week10.pdf">week10.pdf</a></td> <td> <a href="resources/data8/key/week10.key">week10.key</a></td></tr>
 
 </table>
 
