lab12 sl slides

--- a/data8.html
+++ b/data8.html
@@ -60,6 +60,7 @@
 <tr> <td>9</td><td>Oct. 19, 2017</td> <td>Percentiles, Confidence Intervals</td> <td><a href="resources/data8/pdf/week9.pdf">week9.pdf</a></td> <td> <a href="resources/data8/key/week9.key">week9.key</a></td></tr>
 <tr> <td>10</td><td>Oct. 26, 2017</td> <td>Bootstrapping, More Confidence Intervals</td> <td><a href="resources/data8/pdf/week10.pdf">week10.pdf</a></td> <td> <a href="resources/data8/key/week10.key">week10.key</a></td></tr>
 <tr> <td>11</td><td>Nov. 2, 2017</td> <td>Sample Means, CLT, Correlation</td> <td><a href="resources/data8/pdf/week11.pdf">week11.pdf</a></td> <td> <a href="resources/data8/key/week11.key">week11.key</a></td></tr>
+<tr> <td>12</td><td>Nov. 9, 2017</td> <td>Linear Regression</td> <td><a href="resources/data8/pdf/week12.pdf">week12.pdf</a></td> <td> <a href="resources/data8/key/week12.key">week12.key</a></td></tr>
 
 </table>
 
