updated d8 page with video

--- a/data8.html
+++ b/data8.html
@@ -72,6 +72,7 @@
 <p><strong>Created in Fall 2017:</strong></p>
 <p><a href="https://www.youtube.com/watch?v=7P6zJmMV7AE">Histograms Midterm Review</a></p>
 <p><a href="https://www.youtube.com/watch?v=mdHvHv_lqLk">Summer 2017 Midterm Walkthrough</a></p>
+<p><a href="https://www.youtube.com/watch?v=rZfGEibJ0Og&feature=youtu.be">Spring 2017 Final Walkthrough</a></p>
 
 <p><strong>Created in Spring 2017:</strong></p>
 <p><a href="https://www.youtube.com/watch?v=LPMzXlYf8n8">Spring 2017 Midterm Walkthrough</a></p>
